@@ -2,7 +2,11 @@
 
 ## Script to bootstrap the build enviroment
 
+rm -rf autom4te.cache
+rm -f aclocal.m4
+
 aclocal $ACLOCAL_FLAGS -I m4
-autoconf
 autoheader
+autoconf
+libtoolize --automake
 automake --add-missing --copy --gnu
