@@ -1,5 +1,8 @@
-AM_CFLAGS = @AO_CFLAGS@ \
-	@ECORE_CFLAGS@ @EVAS_CFLAGS@ @EDJE_CFLAGS@ @ESMART_CFLAGS@
+# $Id$
+
+SUBDIRS = output
+
+AM_CFLAGS = @ECORE_CFLAGS@ @EVAS_CFLAGS@ @EDJE_CFLAGS@ @ESMART_CFLAGS@
 
 bin_PROGRAMS = eplayer
 
@@ -8,7 +11,7 @@ eplayer_SOURCES = eplayer.c eplayer.h \
 	callbacks.c callbacks.h \
 	vorbis.c vorbis.h \
 	playlist.c playlist.h \
-	mixer.c mixer.h
+	output_plugin.c output_plugin.h
 
-eplayer_LDADD = -lvorbis -lvorbisfile @AO_LIBS@ \
+eplayer_LDADD = @DL_LIBS@ @VORBIS_LIBS@ \
 	@ECORE_LIBS@ @EVAS_LIBS@ @EDJE_LIBS@ @ESMART_LIBS@
