@@ -1,6 +1,3 @@
 .deps
-.libs
 Makefile
 Makefile.in
-eplayer
-*.o
