@@ -2,5 +2,5 @@
 .libs
 Makefile
 Makefile.in
-eplayer
-*.o
+*.la
+*.lo
