@@ -1,0 +1,11 @@
+# $Id$
+
+if HAVE_OSS
+
+plugin_LTLIBRARIES = libOSS.la
+plugindir = @PLUGIN_DIR@/output
+
+libOSS_la_SOURCES = oss.c
+libOSS_la_LDFLAGS = -module -avoid-version
+
+endif
