@@ -12,7 +12,7 @@
  *
  * @param udata Pointer to an ePlayer struct.
  */
-int track_play_chunk(void *udata) {
+int vorbis_play_chunk(void *udata) {
 	ePlayer *player = udata;
 	long bytes_read;
 	int big_endian = 0;
@@ -25,12 +25,12 @@ int track_play_chunk(void *udata) {
 	/* read the data ... */
 	bytes_read = ov_read(&player->current_track, pcmout, sizeof(pcmout),
 	                     big_endian, 2, 1, NULL);
-
-    if (bytes_read) /* ... and play it */
-		ao_play(player->ao_dev, pcmout, bytes_read);
+	
+	if (bytes_read) /* ...and play it */
+		player->output->play(pcmout, bytes_read);
 	else /* EOF -> move to the next track */
 		edje_object_signal_emit(player->gui.edje,
-	                            "PLAY_NEXT", "next_button");
+		                        "PLAY_NEXT", "next_button");
 
 	/* the edje callback will re-add the idler, so we can remove it here,
 	 * in case ov_read() failed
@@ -38,15 +38,16 @@ int track_play_chunk(void *udata) {
 	return !!bytes_read;
 }
 
-int update_time(void *udata) {
+int vorbis_update_time(void *udata) {
 	ePlayer *player = udata;
+	PlayListItem *current_item = player->playlist->cur_item->data;
 	static int old_time = -1;
 	int cur_time;
 
 	cur_time = ov_time_tell(&player->current_track);
 	
 	if (player->time_display == TIME_DISPLAY_LEFT)
-		cur_time = ov_time_total(&player->current_track, -1) - cur_time;
+		cur_time = current_item->duration - cur_time;
 
 	if (cur_time == old_time) /* value didn't change, so don't update */
 		return 1;
@@ -57,26 +58,17 @@ int update_time(void *udata) {
 	return 1;
 }
 
-static int setup_ao(ePlayer *player) {
+static int prepare_output(ePlayer *player) {
 	PlayListItem *current = player->playlist->cur_item->data;
-	ao_sample_format format = {0};
-	
-	format.bits = 16;
-	format.channels = current->channels;
-	format.rate = current->rate;
-	format.byte_format = AO_FMT_NATIVE;
+	int bigendian = 0;
 
-#ifdef DEBUG
-	printf("AO DEBUG: %d Channels at %d Hz, in %d bit words\n",
-	       format.channels, format.rate, format.bits);
+#ifdef WORDS_BIGENDIAN
+	bigendian = 1;
 #endif
-	
-	player->ao_dev = ao_open_live(ao_default_driver_id(), &format, NULL);
 
-	if (!player->ao_dev)
-		fprintf(stderr, "Error opening device.\n");
-
-	return !!player->ao_dev;
+	return player->output->configure(current->channels,
+	                                 current->rate,
+	                                 16, bigendian);
 }
 
 /**
@@ -84,17 +76,16 @@ static int setup_ao(ePlayer *player) {
  *
  * @param player
  */
-void track_close(ePlayer *player) {
-	ao_close(player->ao_dev);
+void vorbis_close(ePlayer *player) {
 	ov_clear(&player->current_track);
 }
 
 /**
- * Opens the current track and prepares libao for playing.
+ * Opens the current track and configured the output plugin for playback.
  *
  * @param player
  */
-void track_open(ePlayer *player) {
+void vorbis_open(ePlayer *player) {
 	PlayListItem *pli;
 	FILE *fp;
 
@@ -112,7 +103,13 @@ void track_open(ePlayer *player) {
 	edje_object_part_text_set(player->gui.edje, "album_name", pli->album);
 	edje_object_part_text_set(player->gui.edje, "time_text", "0:00");
 
-	setup_ao(player);
+	if (!prepare_output(player)) {
+		fprintf(stderr, "Cannot configure output plugin\n");
+	
+		/* move to the next track */
+		edje_object_signal_emit(player->gui.edje,
+		                        "PLAY_NEXT", "next_button");
+	}
 }
 
 void cb_seek_forward(void *udata, Evas_Object *obj,
