@@ -3,11 +3,11 @@
 
 #include "eplayer.h"
 
-int track_play_chunk(void *udata);
-int update_time(void *udata);
+int vorbis_play_chunk(void *udata);
+int vorbis_update_time(void *udata);
 
-void track_open(ePlayer *player);
-void track_close(ePlayer *player);
+void vorbis_open(ePlayer *player);
+void vorbis_close(ePlayer *player);
 
 void cb_seek_forward(void *udata, Evas_Object *obj,
                      const char *emission, const char *src);
